# card_bar_story_engine

./: .gitignore  CLAUDE.md  README.md  pre-CLAUDE.md  pyproject.toml  replay_12rounds.html  requirements.txt
cbse/: __main__.py
cbse/engine/: app.py  content_loader.py  llm_service.py  models.py  prompt_builder.py  replay.py  rules_engine.py  save_system.py  schema_validator.py  state_store.py  utils.py
cbse/engine/llm/: __init__.py  base.py  gemini_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py
games/cdi_game/: endings.md  game.yaml  intro.md  items.yaml  npcs.yaml  triggers.yaml  world.md
games/cdi_game/scenes/: 01_garage.md  02_commute.md  03_parking.md  04_highway.md  05_service_area.md  06_mountain_road.md  07_ancient_town.md  08_return_night.md  09_final.md  10_home.md
games/cdi_game_v2/: endings.md  game.yaml  intro.md  items.yaml  npcs.yaml  triggers.yaml  world.md
games/cdi_game_v2/scenes/: 01_driveway.md  02_city_commute.md  03_office_parking.md  04_friday_planning.md  05_highway_trip.md  06_mountain_offline.md  (+3 more)
games/mist_harbor/: endings.md  game.yaml  intro.md  items.yaml  npcs.yaml  triggers.yaml  world.md
games/polish_soldier/: endings.md  game.yaml  intro.md  items.yaml  npcs.yaml  triggers.yaml  world.md
games/polish_solider/: game.yaml  intro.md  triggers.yaml  world.md
replays/: mist_harbor_demo.jsonl  polish_soldier_test.jsonl
tests/: test_game_flow_integration.py  test_ollama_integration.py  test_rules_engine.py  test_schema_validator_coerce.py  test_schema_validator_ollama_outputs.py  test_state_updates.py
(+13 files in other folders)
